--- a/notes/provas/ap1.ipynb
+++ b/notes/provas/ap1.ipynb
@@ -11,8 +11,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "84245f2f",
+   "metadata": {},
+   "source": [
+    "## Interseções\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "3897cfff",
    "metadata": {},
    "outputs": [],
@@ -501,6 +509,84 @@
     "c36 = 1 - c16 - c26\n",
     "\n",
     "print(f\"c_1 = {c16}; c_2, {c26}; c_3 = {c36}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ff2e389",
+   "metadata": {},
+   "source": [
+    "## Energia que chega"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "01da3ebf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Pf = np.array([300,300,1000])\n",
+    "Pat = np.array([208,208,0])\n",
+    "L = Pf - Pat\n",
+    "norma_L = np.linalg.norm(L)\n",
+    "l = L/norma_L"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e0741dff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = np.array ([-0.58, 0.80, 0.005])\n",
+    "r = 2 * np.dot(n,l) - l\n",
+    "v = -d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c16d083e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kd = ke = np.array([0.5,0.25, 0.5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "50052a78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Fe = (np.dot(r,v))**2\n",
+    "Fd = np.dot(n,l)\n",
+    "intFont = np.array([1,1,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2a94ab4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.195 , 0.0975, 0.195 ])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Ie = intFont * kd * 0.02 + intFont * ke * 0.37\n",
+    "Ie"
    ]
   }
  ],
