cubo/bloco retangular implementado

--- a/notes/provas/ap1.ipynb
+++ b/notes/provas/ap1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "92304d99",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "3897cfff",
    "metadata": {},
    "outputs": [],
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "e0741dff",
    "metadata": {},
    "outputs": [],
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "c16d083e",
    "metadata": {},
    "outputs": [],
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "50052a78",
    "metadata": {},
    "outputs": [],
@@ -569,23 +569,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "2a94ab4b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.195 , 0.0975, 0.195 ])"
+       "array([0.01 , 0.005, 0.01 ])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Ie = intFont * kd * 0.02 + intFont * ke * 0.37\n",
+    "Ie = intFont * kd * 0.02 \n",
     "Ie"
    ]
   }
